# First_laba_s2

./: CMakeLists.txt  double_type.c  double_type.h  integer_type.c  integer_type.h  main.c  matrix_errors.h  matrix_functions.c  matrix_functions.h  matrix_type.c  matrix_type.h  tests.c  tests.h  type_info.h
